Directory Page Horizontal Scroll Fix

--- a/stylesheets/pride-fsw/responsive/media-query-xs.less
+++ b/stylesheets/pride-fsw/responsive/media-query-xs.less
@@ -117,6 +117,18 @@
                 display: none;
             }
         }
+          .mz-productlist {
+            .mz-productlist-list {
+                .mz-productlist-item {
+                 .mz-productlisting-image {
+                    min-height: unset;
+                    img {
+                    width: 100%;
+                }
+              }
+             }
+           }
+         }
     }
     .mz-l-paginatedlist {
         .mz-l-paginatedlist-header {
